front/vue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-vue-service
  namespace: default
spec:
  selector:
    app: devops-vue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
