front/vue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-vue-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: seyedmahdisheikh.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-vue-service
            port:
              number: 80
